added models, dependency injection and some basic logic
